--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -53,12 +53,12 @@
         <!-- {% if request.user.is_authenticated %} -->
         <!-- item--><a href="/page-profile.html" class="link" data-toggle="tooltip" title="Settings"><i
                 class="ti-settings"></i></a>
-        <!-- item--><a href="/" class="link" data-toggle="tooltip" title="Email"><i
-                class="mdi mdi-gmail"></i></a>
-        <!-- item--><a href="{% url 'logout' %}" class="link" data-toggle="tooltip" title="Logout"><i
-                class="mdi mdi-power"></i></a> 
+        <!-- item--><a href="/instrucciones.html" class="link" data-toggle="tooltip" title="Instructivos"><i
+                class="mdi mdi-library"></i></a>
+        <!-- item--><a href="{% url 'logout' %}" class="link" data-toggle="tooltip" title="Salir"><i
+                class="mdi mdi-logout"></i></a>
         <!-- {% endif %} -->
-    </div> 
+    </div>
     <!-- End Bottom points-->
 </aside>
 {% endif %}
