--- a/apps/templates/layouts/base-footer.html
+++ b/apps/templates/layouts/base-footer.html
@@ -1,4 +1,3 @@
 <footer class="footer text-center">
-    &copy; <a target="_blank" href="#">UNPAZ</a>
-    - Desarrollado por <a target="_blank" href="#">Anibale</a>.
+    &copy; <a target="_blank" href="#">Plan VES LGTI - UNPAZ</a>
 </footer>
