--- a/apps/templates/layouts/base-fullscreen.html
+++ b/apps/templates/layouts/base-fullscreen.html
@@ -13,7 +13,7 @@
     <meta name="robots" content="noindex,nofollow">
 
     <title>
-        DEMO Plataforma - {% block title %}{% endblock %} | UnPaz
+        Plataforma Educativa de Contenidos Prácticos. LGTI - {% block title %}{% endblock %} | UnPaz
     </title>
 
     <!-- Favicon icon
