--- a/apps/templates/home/instrucciones.html
+++ b/apps/templates/home/instrucciones.html
@@ -29,7 +29,7 @@
                 <!-- <h3 class="text-themecolor">Plataforma Educativa de Contenidos Prácticos. LGTI</h3> -->
                 <ol class="breadcrumb">
                     <!-- <li class="breadcrumb-item"><a href="javascript:void(0)">Home</a></li> -->
-                    <li class="breadcrumb-item active">Bienvenido/a {{ request.user.username }} </li>
+                    <li class="breadcrumb-item active">{{ request.user.username }}, aqui puede leer las instrucciones de uso</li>
                 </ol>
             </div>
             <div class="col-md-7 col-4 align-self-center">
