--- a/apps/templates/home/page-404.html
+++ b/apps/templates/home/page-404.html
@@ -1,6 +1,6 @@
 {% extends "layouts/base-fullscreen.html" %}
 
-{% block title %} Page 404 {% endblock %} 
+{% block title %} Page 404 {% endblock %}
 
 <!-- Plugins CSS goes HERE  -->
 {% block plugin_stylesheets %}{% endblock plugin_stylesheets %}
@@ -15,19 +15,16 @@
     <!-- ============================================================== -->
     <section id="wrapper" class="error-page">
         <div class="error-box">
-            
+
             <div class="error-body text-center">
                 <h1>404</h1>
-                <h3 class="text-uppercase">Page Not Found</h3>
-                <p class="text-muted m-t-30 m-b-30">Please contact support if the problem persists.</p>
+                <h3 class="text-uppercase">Página no Encontrada</h3>
+                <p class="text-muted m-t-30 m-b-30">Por favor contacte al Administrador si el problema persiste</p>
                 <a href="/" class="btn btn-info btn-rounded waves-effect waves-light m-b-40">Home</a>
             </div>
 
-            <footer class="footer text-center"> 
-                &copy; <a target="_blank" href="https://www.wrappixel.com/">WrapPixel</a>
-                - coded by <a target="_blank" href="https://appseed.us">AppSeed</a>.
-            </footer>
-            
+            {% extends "layouts/base-footer.html" %}
+
         </div>
     </section>
 
