--- a/apps/templates/includes/footer.html
+++ b/apps/templates/includes/footer.html
@@ -1,4 +1,3 @@
 <footer class="footer">
-    &copy; <a target="_blank" href="#">UNPAZ</a>
-    - Desarrollado en <a target="_blank" href="#">-2021</a>.
+    &copy; <a target="_blank" href="#">Plan VES LGTI - UNPAZ</a>
 </footer>
