--- a/apps/templates/home/instrucciones.html
+++ b/apps/templates/home/instrucciones.html
@@ -28,8 +28,8 @@
             <div class="col-md-5 col-8 align-self-center">
                 <!-- <h3 class="text-themecolor">Plataforma Educativa de Contenidos Prácticos. LGTI</h3> -->
                 <ol class="breadcrumb">
-                    <!-- <li class="breadcrumb-item"><a href="javascript:void(0)">Home</a></li> -->
-                    <li class="breadcrumb-item active">{{ request.user.username }}, aqui puede leer las instrucciones de uso</li>
+                    <li class="breadcrumb-item"><a href="javascript:void(0)">Home</a></li>
+                    <li class="breadcrumb-item active">Instruccion de Uso</li>
                 </ol>
             </div>
             <div class="col-md-7 col-4 align-self-center">
@@ -56,8 +56,34 @@
                             <div class="col-12">
                                 <div class="d-flex flex-wrap">
                                     <div>
-                                        <h3 class="card-title">Bienvenido/a a la Plataforma Educativa de Contenidos Prácticos </h3><br>
-                                        <h6 class="card-subtitle">En esta plataforma podrás realizar las prácticas y actividades  de las materias de la carrera LGTI, con la orientación y guías de los/las profesores.</h6>
+                                        <h3 class="card-title">INSTRUCCIONES DE USO </h3><br>
+                                        <h6 class="card-subtitle">El/La Alumno/a puede interactuar directamente en la Web, el requierimiento mas necesario es tener conexión a internet
+                                         , sin embargo es posible que el alumno pueda descargar una parte de la aplicación a su computadora con mínimos requerimientos y posteriormente
+                                         puede interactuar sin la necesidad de tener conexión a internet.</h6><br>
+                                        <h4 class="card-title">Instalar en Windows</h4><br>
+                                        <h6 class="card-subtitle"> Para Utilizar en Windows deberá descargar y seguir las instrucciones de la Documentación Oficial de Docker
+                                        , esto le permitirá ejecutar los contenedores que vaya a descargar </h6> <a href="https://docs.docker.com/desktop/windows/"> Leer Instrucciones </a>
+                                        <br><br>
+                                        <h4 class="card-title">Instalar en Linux</h4><br>
+                                        <h6 class="card-subtitle"> Para Utilizar en Linux  deberá descargar y seguir las instrucciones de la Documentación Oficial de Docker
+                                        , esto le permitirá ejecutar los contenedores que vaya a descargar </h6> <a href="https://docs.docker.com/engine/install/"> Leer Instrucciones </a>
+                                        <h4 class="card-title">Instalar en Linux</h4><br>
+                                        <h6 class="card-subtitle"> Para Utilizar en Linux  deberá descargar y seguir las instrucciones de la Documentación Oficial de Docker
+                                        , esto le permitirá ejecutar los contenedores que vaya a descargar </h6> <a href="https://docs.docker.com/engine/install/"> Leer Instrucciones </a>
+                                        <br><br>
+                                        <h4 class="card-title">Instalar en Docker Compose</h4><br>
+                                        <h6 class="card-subtitle"> En Caso de que tenga Linux en su Computadora tambien necesita instalar docker-compose <br><br>
+                                          // Descargar Desde El Repositorio <br><br>
+                                          'sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose' <br><br>
+                                          // Dar Permisos de Ejecucion <br><br>
+                                          'sudo chmod +x /usr/local/bin/docker-compose' <br><br>
+                                          // Crear un enlace simbólico (similar a Acceso Directo en Windows) <br><br>
+                                          'sudo ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose' <br><br>
+                                          // Si tienes todo instalado puedes testear la version de docker compose <br><br>
+                                          'docker-compose --version' <br>
+                                         </h6> <a href="https://docs.docker.com/compose/install/"> Leer Más Instrucciones </a>
+
+
                                     </div>
                                     <div class="ml-auto">
                                         <!-- <ul class="list-inline">
