--- a/apps/templates/home/comunicacion-redes.html
+++ b/apps/templates/home/comunicacion-redes.html
@@ -16,19 +16,15 @@
         <!-- ============================================================== -->
         <div class="row page-titles">
             <div class="col-md-5 col-8 align-self-center">
-                <h3 class="text-themecolor m-b-0 m-t-0">Dashboard</h3>
+                <h4 class="text-themecolor m-b-0 m-t-0">Comunicación y Redes</h4>
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="javascript:void(0)">Home</a></li>
-                    <li class="breadcrumb-item active">Comunicación y Redes</li>
+                    <li class="breadcrumb-item active"><a href="comunicacion-redes.html">Home</a></li>
+                    <!-- <li class="breadcrumb-item active">Sistemas Operativos II</li> -->
+                    <li class="breadcrumb-item"><a href="comunicacion-redes-tutoriales.html">Tutoriales </a> </li>
+                    <li class="breadcrumb-item"><a href="comunicacion-redes-bibliografia.html">Bibliografía </a> </li>
                 </ol>
             </div>
-            <div class="col-md-7 col-4 align-self-center">
-                <a target="_blank"
-                   href="#"
-                    class="btn waves-effect waves-light btn-danger pull-right hidden-sm-down">
-                    DEMO Version
-                </a>
-            </div>
+
         </div>
         <!-- ============================================================== -->
         <!-- End Bread crumb and right sidebar toggle -->
@@ -45,21 +41,27 @@
                             <div class="col-12">
                                 <div class="d-flex flex-wrap">
                                     <div>
-                                        <h3 class="card-title">Actividades</h3>
-                                        <h6 class="card-subtitle">Actividad Nro N a Realizar</h6>
-                                    </div>
-                                    <div class="ml-auto">
-                                        <!-- <ul class="list-inline">
-                                            <li>
-                                                <h6 class="text-muted text-success"><i
-                                                        class="fa fa-circle font-10 m-r-10 "></i>Ample</h6>
-                                            </li>
-                                            <li>
-                                                <h6 class="text-muted  text-info"><i
-                                                        class="fa fa-circle font-10 m-r-10"></i>Pixel</h6>
-                                            </li>
-                                        </ul> -->
-                                        <p>1. Conectarse a la primer actividades</p>
+                                        <h3 class="card-title">Consultas a un DNS Server</h3>
+                                        <h6 class="card-subtitle">
+                                          <p><b>Estimadas y estimados estudiantes:</b></p>
+<p><b>Para continuar con el desarrollo de los contenidos ya teniendo claros los conceptos b&aacute;sicos de hardware y software de Redes, y habiendo comprendido sus diferentes componentes e interrelaciones, dentro de la unidad N&deg;2 la capa de aplicaci&oacute;n, nos enfocaremos en el servicio de nombre de dominio (DNS), que como mencionamos durante los encuentros, si este servicio falla podemos decir que se cay&oacute; todo internet. En tal sentido debemos comprender su uso y arquitectura, por lo cual el tema se present&oacute; de la siguiente manera, en las clases te&oacute;ricas.</b></p>
+<ul>
+<li style="font-weight: 400;" aria-level="1"><b>Sistema de resoluci&oacute;n de nombres.</b></li>
+<li style="font-weight: 400;" aria-level="1"><b>Registros DNS</b></li>
+<li style="font-weight: 400;" aria-level="1"><b>Consultas DNS.&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;</b></li>
+</ul>
+<h3 style="text-align: center; color: #3f7320;"></h3>
+<p><b>Para dar un breve repaso disponemos de la presentaci&oacute;n vista en clase <a href="https://img.youtube.com/vi/dIGxJCqLJlY/maxresdefault.jpg">Click Aqui</a> y el siguiente video que resumen la parte conceptual del servicio de nombre de dominio (DNS)</b></p>
+
+<h3 style="text-align: center; color: #3f7320;"></h3>
+<p><b>Ahora bien</b><b>, habiendo repasado de que se trata visualmente</b><b> ahora si los invito a realizar las siguientes practicas propuestas, en un ambiente controlado.&nbsp;</b></p>
+<p><span style="font-weight: 400;">LINK A LAS PRACTICAS, se agrega material de apoyo para el uso del comando NSLOOKUP para los test de los p</span><span style="font-weight: 400;">rac</span><span style="font-weight: 400;">ticos.</span></p>
+<p><b>&nbsp;</b></p>
+<p><b>Bibliograf&iacute;a de lectura obligatoria para esta clase:</b></p>
+<p><b>Andrew&nbsp; S. Tanenbaum,&nbsp; David J. Wetherall, (2012). Redes de computadoras. (5ta ed). Pearson &nbsp;(Cap 7.1)</b><b><br /><br /></b></p>
+<p><b>&nbsp;&nbsp;Bibliograf&iacute;a de referencia</b></p>
+<p><b>Andrew&nbsp; S. Tanenbaum,&nbsp; Marteen V. Steen, (2008). Sistemas distribuidos principios y paradigmas. (2da ed).&nbsp; Person - Prentice Hall.</b></p>
+</h6>
                                     </div>
                                 </div>
                             </div>
