--- a/apps/templates/home/comunicacion-redes-tutoriales.html
+++ b/apps/templates/home/comunicacion-redes-tutoriales.html
@@ -1,6 +1,6 @@
 {% extends "layouts/base.html" %}
 
-{% block title %} Sistemas Operativos II {% endblock %}
+{% block title %} Comunicación y Redes {% endblock %}
 
 <!-- Plugins CSS goes HERE  -->
 {% block plugin_stylesheets %}{% endblock plugin_stylesheets %}
@@ -16,12 +16,12 @@
         <!-- ============================================================== -->
         <div class="row page-titles">
             <div class="col-md-5 col-8 align-self-center">
-                <h4 class="text-themecolor m-b-0 m-t-0">Sistemas Operativos 2</h4>
+                <h4 class="text-themecolor m-b-0 m-t-0">Comunicación y Redes</h4>
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="javascript:void(0)">Home</a></li>
+                    <li class="breadcrumb-item"><a href="comunicacion-redes.html">Home</a></li>
                     <!-- <li class="breadcrumb-item active">Sistemas Operativos II</li> -->
-                    <li class="breadcrumb-item active">Tutoriales</li>
-                    <li class="breadcrumb-item active">Bibliografía</li>
+                    <li class="breadcrumb-item active"><a href="comunicacion-redes-tutoriales.html">Tutoriales</a></li>
+                    <li class="breadcrumb-item active"><a href="comunicacion-redes-bibliografia.html">Bibliografía</a></li>
                 </ol>
             </div>
 
@@ -40,19 +40,29 @@
                         <div class="row">
                             <div class="col-12">
                                 <div class="d-flex flex-wrap">
-                                      <div>
-                                        <h3 class="card-title">Edicion de Texto con Nano en Linux</h3>
-                                        <h6 class="card-title">
-<!-- pasar a dinamico -->
-                                          <p><b>INTRODUCCION A NANO</b></p>
-<p><span style="font-weight: 400;">&iquest;Que es Nano? Es un editor de texto por consola de comandos.&nbsp;&nbsp;</span></p>
-<p><span style="font-weight: 400;">&iquest;Que veremos?&nbsp;</span></p>
-<p><span style="font-weight: 400;">-Manejo de edici&oacute;n de texto, modos y comandos en Linux.</span></p>
-<p><span style="font-weight: 400;">C&oacute;mo crear un documento de texto, editarlo, hacer b&uacute;squedas, borrar datos, sustituir datos.</span></p>
-<p><span style="font-weight: 400;">Editar archivos de configuraci&oacute;n, textos cualesquiera para notas. Editar c&oacute;digo tambi&eacute;n</span></p>
+                                    <div>
+                                        <h3 class="card-title">Consultas a un DNS Server</h3>
+                                        <h6 class="card-subtitle">
+                                          <p><b>Estimadas y estimados estudiantes:</b></p>
+<p><b>Para continuar con el desarrollo de los contenidos ya teniendo claros los conceptos b&aacute;sicos de hardware y software de Redes, y habiendo comprendido sus diferentes componentes e interrelaciones, dentro de la unidad N&deg;2 la capa de aplicaci&oacute;n, nos enfocaremos en el servicio de nombre de dominio (DNS), que como mencionamos durante los encuentros, si este servicio falla podemos decir que se cay&oacute; todo internet. En tal sentido debemos comprender su uso y arquitectura, por lo cual el tema se present&oacute; de la siguiente manera, en las clases te&oacute;ricas.</b></p>
+<ul>
+<li style="font-weight: 400;" aria-level="1"><b>Sistema de resoluci&oacute;n de nombres.</b></li>
+<li style="font-weight: 400;" aria-level="1"><b>Registros DNS</b></li>
+<li style="font-weight: 400;" aria-level="1"><b>Consultas DNS.&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;</b></li>
+</ul>
+<h3 style="text-align: center; color: #3f7320;"></h3>
+<p><b>Para dar un breve repaso disponemos de la presentaci&oacute;n vista en clase <a href="https://img.youtube.com/vi/dIGxJCqLJlY/maxresdefault.jpg">Click Aqui</a> y el siguiente video que resumen la parte conceptual del servicio de nombre de dominio (DNS)</b></p>
 
-                                        </h6>
-                                      </div>
+<h3 style="text-align: center; color: #3f7320;"></h3>
+<p><b>Ahora bien</b><b>, habiendo repasado de que se trata visualmente</b><b> ahora si los invito a realizar las siguientes practicas propuestas, en un ambiente controlado.&nbsp;</b></p>
+<p><span style="font-weight: 400;">LINK A LAS PRACTICAS, se agrega material de apoyo para el uso del comando NSLOOKUP para los test de los p</span><span style="font-weight: 400;">rac</span><span style="font-weight: 400;">ticos.</span></p>
+<p><b>&nbsp;</b></p>
+<p><b>Bibliograf&iacute;a de lectura obligatoria para esta clase:</b></p>
+<p><b>Andrew&nbsp; S. Tanenbaum,&nbsp; David J. Wetherall, (2012). Redes de computadoras. (5ta ed). Pearson &nbsp;(Cap 7.1)</b><b><br /><br /></b></p>
+<p><b>&nbsp;&nbsp;Bibliograf&iacute;a de referencia</b></p>
+<p><b>Andrew&nbsp; S. Tanenbaum,&nbsp; Marteen V. Steen, (2008). Sistemas distribuidos principios y paradigmas. (2da ed).&nbsp; Person - Prentice Hall.</b></p>
+</h6>
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-12">
@@ -65,16 +75,9 @@
             <div class="col-lg-4 col-md-5">
                 <div class="card">
                     <div class="card-block">
-                      <div class="col-md-7 col-4 align-self-center">
-                          <a target="_blank"
-                             href="http://51.222.111.177:4000/wetty"
-                              class="btn waves-effect waves-light btn-info pull-right hidden-sm-down">
-                              Abrir Terminal
-                          </a>
-                      </div>
-                        <!-- <h3 class="card-title">Visto Por </h3>
+                        <h3 class="card-title">Visto Por </h3>
                         <h6 class="card-subtitle">Listado de Visitantes</h6>
-                        <div id="visitor" style="height:290px; width:100%;"></div> -->
+                        <div id="visitor" style="height:290px; width:100%;"></div>
                     </div>
                     <div>
                         <hr class="m-t-0 m-b-0">
