--- a/apps/templates/home/page-403.html
+++ b/apps/templates/home/page-403.html
@@ -19,7 +19,7 @@
             <div class="error-body text-center">
                 <h1>403</h1>
                 <h3 class="text-uppercase">Acceso Denegado</h3>
-                <p class="text-muted m-t-30 m-b-30">Autenticate o Contactate con Soporte</p>
+                <p class="text-muted m-t-30 m-b-30">Posible error de Autenticación, Contactate con Soporte</p>
                 <a href="{% url 'login' %}"
                    class="btn btn-info btn-rounded waves-effect waves-light m-b-40">Login</a>
             </div>
